[gd_scene load_steps=24 format=3 uid="uid://b2o6x1v6mv3uy"]

[ext_resource type="Script" path="res://scenes/enemies/boss_1.gd" id="1_rvfdw"]
[ext_resource type="Texture2D" uid="uid://dctq0thtw1w22" path="res://graphics/enemies/Enemy6.png" id="2_n8hee"]
[ext_resource type="Script" path="res://scenes/Map/Spikes.gd" id="3_72v1c"]
[ext_resource type="AudioStream" uid="uid://d13r0bq7ku6n1" path="res://sounds/sfx/Enemy_Hurt.wav" id="4_4jmbj"]
[ext_resource type="AudioStream" uid="uid://b408c0d0a0kyi" path="res://sounds/sfx/Hit.wav" id="5_0gdvk"]
[ext_resource type="AudioStream" uid="uid://dy28bv6q1jyaw" path="res://sounds/sfx/Dash2.wav" id="6_mxeon"]
[ext_resource type="AudioStream" uid="uid://cwpmxfyciihl0" path="res://sounds/sfx/roar.wav" id="7_k510d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fbfox"]
size = Vector2(47.7987, 63.3333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yfdlv"]
size = Vector2(43, 57)

[sub_resource type="CircleShape2D" id="CircleShape2D_llrk6"]
radius = 52.3344

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mwise"]
size = Vector2(96.1667, 26.3333)

[sub_resource type="Animation" id="Animation_i0nwf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spikes2/CollisionShape2D2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Enemy2:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Spikes2/CollisionShape2D3:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SFX/attack1:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:SPEED")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:flip")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Spikes2/CollisionShape2D4:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_66tul"]
resource_name = "attack1"
length = 1.5
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.28, 0.44, 0.56, 0.7, 0.86, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 2, 3, 4, 5, 6, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spikes2/CollisionShape2D3:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7, 0.93),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SFX/attack1:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:SPEED")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:flip")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Spikes2/CollisionShape2D4:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_cj33u"]
resource_name = "die"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spikes2/CollisionShape2D2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_kstk6"]
resource_name = "hurt"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Enemy2:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_h31us"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_053w8"]
resource_name = "run"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 2]
}

[sub_resource type="Animation" id="Animation_qvjyd"]
resource_name = "attack2"
length = 3.5
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 1, 1.16, 1.28, 1.42, 1.58, 1.72, 1.88),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 10, 11, 12, 11, 12, 11, 12, 14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SFX/attack1:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:SPEED")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.01, 1.89),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1500, 0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Spikes2/CollisionShape2D4:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.01, 1.89),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Spikes2/CollisionShape2D2:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.01, 1.89),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:flip")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1.01, 1.89),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rkpd7"]
_data = {
"RESET": SubResource("Animation_i0nwf"),
"attack1": SubResource("Animation_66tul"),
"attack2": SubResource("Animation_qvjyd"),
"die": SubResource("Animation_cj33u"),
"hurt": SubResource("Animation_kstk6"),
"idle": SubResource("Animation_h31us"),
"run": SubResource("Animation_053w8")
}

[sub_resource type="Animation" id="Animation_8giyk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy2:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_xawy5"]
resource_name = "die"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy2:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_cbjl4"]
resource_name = "hit"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy2:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fcdas"]
_data = {
"RESET": SubResource("Animation_8giyk"),
"die": SubResource("Animation_xawy5"),
"hit": SubResource("Animation_cbjl4")
}

[node name="Enemy3" type="CharacterBody2D" groups=["enemy"]]
scale = Vector2(3, 3)
collision_layer = 2
script = ExtResource("1_rvfdw")

[node name="Enemy2" type="Sprite2D" parent="."]
position = Vector2(1.33333, -48)
texture = ExtResource("2_n8hee")
offset = Vector2(-21.05, 0)
hframes = 4
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.66667, -0.333333)
shape = SubResource("RectangleShape2D_fbfox")

[node name="Spikes2" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 9
input_pickable = false
script = ExtResource("3_72v1c")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Spikes2"]
position = Vector2(2.16667, 2.5)
shape = SubResource("RectangleShape2D_yfdlv")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Spikes2"]
position = Vector2(-49.6667, -20)
shape = SubResource("CircleShape2D_llrk6")
disabled = true

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Spikes2"]
position = Vector2(-20.5833, 8.33333)
shape = SubResource("RectangleShape2D_mwise")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rkpd7")
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fcdas")
}

[node name="StunTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="SFX" type="Node" parent="."]

[node name="hurt" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("4_4jmbj")
mix_target = 2
bus = &"Music"

[node name="hit" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("5_0gdvk")
mix_target = 2
bus = &"Music"

[node name="attack1" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("6_mxeon")
mix_target = 2
bus = &"Music"

[node name="roar" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("7_k510d")
volume_db = -10.0
mix_target = 2
bus = &"Music"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="body_entered" from="Spikes2" to="Spikes2" method="_on_body_entered"]
[connection signal="body_exited" from="Spikes2" to="Spikes2" method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
